Kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalrredis-deployment
  labels:
    app: signalrredis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signalrredis
  template:
    metadata:
      labels:
        app: signalrredis
    spec:
      containers:
      - name: signalrredis
        image: ashwin027/signalrredis:latest
        ports:
        - containerPort: 80
